[수정사항] - Compose 라이브러리 호환 가능하게 빌드 - Kotlin 1.9.20 에 Dagger Hilt, Room 관련 Gradle 수정 - setupObserverViewModel 코드 Null 관련 대응하게 앱 수정