@@ -1,23 +1,29 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'com.google.dagger.hilt.android'
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.littlefox.app.foxschool"
         minSdkVersion 23
-        targetSdkVersion 31
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    tasks.withType(JavaCompile).configureEach{
+        options.fork = true
+        options.forkOptions.jvmArgs +=[
+                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
     }
 
     buildTypes {
@@ -33,13 +39,27 @@ android {
         abortOnError false
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+    buildFeatures{
+        compose true
     }
 
+    composeOptions{
+        kotlinCompilerExtensionVersion "$compose_version"
+    }
 
+    kotlinOptions {
+        jvmTarget = '17' // 또는 11, 17 등
+        freeCompilerArgs += ['-Xuse-ir']
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    namespace 'com.littlefox.app.foxschool'
 }
+
 buildscript
         {
             ext.support_lib_version ='28.0.0'
@@ -57,18 +77,15 @@ dependencies {
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.jakewharton:butterknife:10.2.0'
-    kapt 'com.jakewharton:butterknife-compiler:10.2.0'
-    kapt "androidx.room:room-compiler:2.3.0"
+    implementation 'com.jakewharton:butterknife:10.2.3'
+    kapt 'com.jakewharton:butterknife-compiler:10.2.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
 
     implementation "com.andkulikov:transitionseverywhere:1.8.0"
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference:1.1.1'
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha03" // 생체인증 관련 라이브러리
+    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha03" // 생체인증 관련 라이브러리s
 
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
@@ -101,7 +118,7 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
     implementation "com.google.android.exoplayer:exoplayer-hls:$exoplayer_version"
     implementation 'me.kaelaela:verticalviewpager:1.0.0@aar'
-    implementation 'dev.dworks.libs:volleyplus:+'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation "com.android.billingclient:billing:$billing_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
@@ -112,10 +129,23 @@ dependencies {
     implementation "androidx.core:core-ktx:1.6.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    kapt "com.google.dagger:hilt-android-compiler:2.38"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha03"
-    implementation "com.google.dagger:hilt-android:2.38"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+
+    implementation "androidx.room:room-runtime:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
+    // 테스트를 위한 추가 의존성
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     implementation "androidx.fragment:fragment-ktx:1.4.1"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
@@ -132,7 +162,8 @@ dependencies {
 
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+
+
 }
-repositories {
-    mavenCentral()
-}
+
